--- a/src/main/java/org/automation/resources/prop.properties
+++ b/src/main/java/org/automation/resources/prop.properties
@@ -1,1 +1,5 @@
+browser=chrome
 chromedriver=/Users/sanj/Documents/chromeDriver/chromedriver
+geckodriver=
+edgedriver=
+baseUrl=https://rahulshettyacademy.com
