--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
       <version>3.2.0</version>
       <type>maven-plugin</type>
     </dependency>
+      <dependency>
+          <groupId>org.testng</groupId>
+          <artifactId>testng</artifactId>
+          <version>7.0.0</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
   <build>
