--- a/src/main/java/org/automation/resources/prop.properties
+++ b/src/main/java/org/automation/resources/prop.properties
@@ -1,5 +1,8 @@
 browser=chrome
-chromedriver=/Users/sanj/Documents/chromeDriver/chromedriver
+chromedriver=/usr/local/bin/chromedriver
 geckodriver=
 edgedriver=
 baseUrl=https://rahulshettyacademy.com
+remote=
+SAUCE_USER_ID=
+SAUCE_ACCESS_KEY=
