--- a/pom.xml
+++ b/pom.xml
@@ -58,9 +58,9 @@
       <version>2.14.0</version>
     </dependency>
     <dependency>
-      <groupId>com.relevantcodes</groupId>
+      <groupId>com.aventstack</groupId>
       <artifactId>extentreports</artifactId>
-      <version>2.41.2</version>
+      <version>5.0.6</version>
     </dependency>
     <dependency>
       <groupId>org.apache.poi</groupId>
