--- a/src/main/java/org/automation/resources/prop.properties
+++ b/src/main/java/org/automation/resources/prop.properties
@@ -2,6 +2,7 @@ browser=chrome
 chromedriver=/usr/local/bin/chromedriver
 geckodriver=
 edgedriver=
+#baseUrl=https://google.com
 baseUrl=https://rahulshettyacademy.com
 remote=
 SAUCE_USER_ID=
